# autoreduce

./: .env.example  .gitignore  CASE_STUDIES.md  DESIGN.md  README.md  pyproject.toml  pyrightconfig.json
autoreduce/: __init__.py  __main__.py  agent.py  api.py  app.py  benchmark_worker.py  config.py  db.py  events.py  harness.py  llm.py  planner.py  reaper.py  report.py  resource.py  runs.py  scheduler.py  store.py  supervisor.py  worker.py
autoreduce/bench/: __init__.py  __main__.py  loader.py  task.py
examples/: README.md
examples/specdec/: __init__.py  baseline.py  benchmark.py  interface.py  samples.py  workload.py
tests/: test_agentic_loop.py  test_bench.py  test_benchmark_worker.py  test_claim_concurrency.py  test_report.py
web/: package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
web/app/: globals.css  layout.tsx  page.tsx
web/app/case-studies/: page.tsx
web/app/dashboard/: page.tsx
web/app/how-it-works/: page.tsx
web/components/case-studies/: SpeculativeServingReplay.tsx
web/components/chrome/: Footer.tsx  Mascot.tsx  Nav.tsx  TopBar.tsx
web/components/dashboard/: AgentBox.tsx  AgentLog.tsx  AgentPool.tsx  BenchmarkQueue.tsx  BudgetBar.tsx  OriginTag.tsx  PlannerBox.tsx  RankedTable.tsx  ReportPanel.tsx  ResourcePanel.tsx  RunControls.tsx  ScaleCurves.tsx  TopologyPanel.tsx
web/components/landing/: Hero.tsx  InstallSnippet.tsx  TerminalPreview.tsx
web/components/ui/: Card.tsx  CopyButton.tsx  Pill.tsx  StatusDot.tsx  TrafficLights.tsx
web/lib/: api.ts  connection.tsx  env.ts  format.ts  useEventStream.ts
(+3 files in other folders)
