[project]
name = "autoreduce"
version = "0.1.0"
description = "Automated experiment reduction: one LLM planner, a bounded pool of 8 workers, one live ranked table."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "anthropic>=0.40",
    "claude-agent-sdk>=0.2",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["autoreduce*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
